force-app/segments/main/default/objects/Demo_DMO_Event__c/Demo_DMO_Event__c.object-meta.xml
<CustomObject>
    <label>Event</label>
    <nameField>
        <displayFormat>EVT-{00000000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>