force-app/segments/main/default/objects/Demo_DMO_Event__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
            <value><fullName>Mobile</fullName><default>false</default><label>Mobile</label></value>
            <value><fullName>InPerson</fullName><default>false</default><label>In Person</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>