force-app/segments/main/default/objects/Demo_DMO_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>EmailOpen</fullName><default>false</default><label>Email Open</label></value>
            <value><fullName>EmailClick</fullName><default>false</default><label>Email Click</label></value>
            <value><fullName>SmsClick</fullName><default>false</default><label>SMS Click</label></value>
            <value><fullName>PageView</fullName><default>false</default><label>Page View</label></value>
            <value><fullName>FormSubmit</fullName><default>false</default><label>Form Submit</label></value>
            <value><fullName>Login</fullName><default>false</default><label>Login</label></value>
            <value><fullName>AppointmentBooked</fullName><default>false</default><label>Appointment Booked</label></value>
            <value><fullName>PurchaseCompleted</fullName><default>false</default><label>Purchase Completed</label></value>
            <value><fullName>OnboardingStepComplete</fullName><default>false</default><label>Onboarding Step Complete</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>