force-app/segments/main/default/objects/Demo_DMO_Event__c/fields/Event_Value__c.field-meta.xml
<CustomField>
    <fullName>Event_Value__c</fullName>
    <label>Event Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>