force-app/segments/main/default/objects/Demo_DMO_Event__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>